--- a/src/styles/Mixins.scss
+++ b/src/styles/Mixins.scss
@@ -1,4 +1,4 @@
-@import "./Breakpoints";
+@import './Breakpoints';
 
 @mixin flexCenter {
   display: flex;
@@ -16,14 +16,9 @@
 @mixin cardStyling {
   max-width: 700px;
   width: 100%;
-  border-top: 1px solid $lightGray;
-  border-bottom: 1px solid $lightGray;
+  border: 1px solid $lightGray;
+  border-radius: 15px;
   background: $white;
-  
-  @media only screen and (min-width: $mobile) {
-    border: 1px solid $lightGray;
-    border-radius: 15px;
-  }
 }
 
 @mixin flexWrap {
